Fix extra white space for small dashboard reports

--- a/src/plugins/dashboard/public/dashboard_container/_dashboard_container.scss
+++ b/src/plugins/dashboard/public/dashboard_container/_dashboard_container.scss
@@ -6,6 +6,7 @@
 
 .dashboardContainer, .dashboardViewport {
   display: flex;
+  flex: 1;
   flex-direction: column;
 }
 
