--- a/src/plugins/dashboard/public/dashboard_container/component/viewport/_dashboard_viewport.scss
+++ b/src/plugins/dashboard/public/dashboard_container/component/viewport/_dashboard_viewport.scss
@@ -3,8 +3,7 @@
 }
 
 .dshDashboardViewport-withMargins {
-  width: 100%;
-  flex: 1;
+  width: 100%; 
 }
 
 .dshDashboardViewport-controls {
